# neo-events

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  events.py  users.py
app/core/: config.py  security.py
app/crud/: base.py  crud_event.py  crud_user.py
app/db/: models.py
app/schemas/: event.py  user.py
scripts/: init_db.py  setup.sh
tests/: conftest.py  test_auth.py  test_conflicts.py  test_events.py  test_permissions.py  test_users.py  test_versions.py
